--- a/WpfViewBoxAttr/MainWindow.xaml
+++ b/WpfViewBoxAttr/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WpfViewBoxAttr"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Grid Margin="20">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -15,7 +15,7 @@
             Name="imageSource"
             Grid.Column="0"
             Source="Images/Desert.jpg"
-            VerticalAlignment="Top" MouseMove="ImageSource_MouseMove"/>
+            VerticalAlignment="Top" MouseMove="ImageSource_MouseMove" /> 
         <Canvas Grid.Column="0">
             <Rectangle
                 Name="imageBox"
@@ -23,7 +23,8 @@
                 Opacity="0.5"
                 Visibility="Visible"/>
         </Canvas>
-        <Rectangle Name="imageScaled" Grid.Column="1" Stretch="Uniform">
+
+        <Rectangle Name="imageScaled" Grid.Column="1" Stretch="Uniform" Width="300" Height="300">
             <Rectangle.Fill>
                 <VisualBrush
                     Visual="{Binding ElementName=imageSource}"
@@ -31,6 +32,7 @@
                     />
             </Rectangle.Fill>
         </Rectangle>
+        
         <!--<Rectangle Grid.Column="1" Stretch="Uniform">
             <Rectangle.Fill>
                 <VisualBrush
